sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	val lgr=getNombreValeurs()
  for(pivot<-1 to lgr-1){
    var vtemp=getValeur(pivot)
    var ptemp:Int=pivot-1
    while(ptemp>0){if(plusPetit(ptemp+1,ptemp){copie(ptemp,ptemp+1);ptemp-=1}}
  }}